Adds example for structured concurrency and refactors