@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.2.0-SNAPSHOT'
+	id 'org.springframework.boot' version '3.3.1-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -28,4 +28,16 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs += "--enable-preview"
+}
+
 targetCompatibility = JavaVersion.VERSION_21
